# rust-recipes

./: .env.dist  Cargo.toml  README.md  docker-compose.yml  init.sql
src/: main.rs
src/controller/: mod.rs  recipe_request_handlers.rs
src/domain/: mod.rs
src/domain/read_model/: mod.rs  overview.rs
src/domain/read_model/recipe/: mod.rs  recipe_details_repository.rs  recipe_overview_repository.rs
src/domain/write_model/recipe/: recipe.rs  recipe_repository.rs
src/infrastructure/: db_connection.rs
